Tighten up some layout issues for search on mobile

--- a/resources/sass/_page-search.scss
+++ b/resources/sass/_page-search.scss
@@ -8,6 +8,20 @@
     }
 
     .card--inner {
+        .card--avatar {
+            flex: 0 0 70px;
+        }
+
+        .card--about {
+            flex-basis: 10rem;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+
+            // Had to inline style tag this because npm run watch is dropping it - rannnnndom
+            // -webkit-box-orient: vertical;
+        }
+
         .card--tags {
             flex-basis: auto;
             @apply .ml-0 .mt-4;
